--- a/.github/workflows/build-module.yml
+++ b/.github/workflows/build-module.yml
@@ -12,11 +12,11 @@ jobs:
     strategy:
       matrix:
         build_env:
-          - tag: "22.03.4"
-            pkgarch: mips_24kc
-            target: ath79
-            subtarget: nand
-            vermagic: "5c9be91b90bda5403fe3a7c4e8ddb26f"
+          - tag: "22.05.5"
+            pkgarch: aarch64_cortex-a53
+            target: mediatek
+            subtarget: filogic
+            vermagic: "03ba5b5fee47f2232a088e3cd9832aec"
           - tag: "23.05.0"
             pkgarch: mipsel_24kc
             target: ramips
