--- a/.github/workflows/build-module.yml
+++ b/.github/workflows/build-module.yml
@@ -12,11 +12,11 @@ jobs:
     strategy:
       matrix:
         build_env:
-          - tag: "23.05.5"
+          - tag: "24.0"
             pkgarch: aarch64_cortex-a53
             target: mediatek
             subtarget: filogic
-            vermagic: "03ba5b5fee47f2232a088e3cd9832aec"
+            vermagic: "5f888a243508bd63116c3c6987914d47-r1"
           
 
     steps:
